listeners for buttons of custom view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,19 @@
     tools:context=".MainActivity">
 
     <com.landfathich.customviews.BottomButtonsView
+        android:id="@+id/bottom_buttons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:bottomProgressMode="false"
-        app:bottomPositiveTextColor="#240885"
-        app:bottomNegativeTextColor="#240885"
         app:bottomNegativeBackgroundColor="#DDB8B8"
-        app:bottomPositiveBackgroundColor="#309782"
         app:bottomNegativeButtonText="@string/cancel"
-        app:bottomPositiveButtonText="@string/ok" />
+        app:bottomNegativeTextColor="#240885"
+        app:bottomPositiveBackgroundColor="#309782"
+        app:bottomPositiveButtonText="@string/ok"
+        app:bottomPositiveTextColor="#240885"
+        app:bottomProgressMode="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
