use attribute freezesText

--- a/app/src/main/res/layout/part_buttons.xml
+++ b/app/src/main/res/layout/part_buttons.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:textColor="@color/black"
+        android:freezesText="true"
         app:layout_constraintEnd_toStartOf="@+id/space"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
